--- a/src/sass/modules/_alignments.scss
+++ b/src/sass/modules/_alignments.scss
@@ -8,6 +8,7 @@
 	display: inline;
 	float: right;
 	margin-left: 1.5em;
+	text-align: right;
 }
 
 .aligncenter {
